--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,18 +1,23 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Sæmundsson":
+  - firstname: ["Steindór"]
+    url: https://scholar.google.com/citations?user=0k5Z1-8AAAAJ
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"Deisenroth":
+  - firstname: ["Marc"]
+    url: https://deisenroth.cc/
 
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+"Liu":
+  - firstname: ["Qi"]
+    url: https://leuchine.github.io/
 
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
+"Zhu": 
+  - firstname: ["Yuchen"]
+    url: https://scholar.google.com/citations?user=7LoS1loAAAAJ&hl=en
 
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
+"Silva": 
+  - firstname: ["Ricardo"]
+    url: https://www.ucl.ac.uk/statistics/people/ricardosilva
+
+"Kusner": 
+  - firstname: ["Matt J."]
+    url: https://mkusner.github.io/
